--- a/package.json
+++ b/package.json
@@ -118,5 +118,10 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 10"
-  ]
+  ],
+  "dependencies": {
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "v-mask": "^1.3.2"
+  }
 }
