--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "v-mask": "^1.3.2"
+    "v-mask": "^1.3.2",
+    "vue2-google-maps": "^0.10.2"
   }
 }
